<resources>
    <string name="app_name">Sociallıq Pedagogika</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="qt">Bul jerde temalar turadi</string>
    <string name="kirisiw">KIRISIW</string>
    <string name="socPedKirisiw">SOCIALLİQ PEDAGOGIKA HÁM PEDAGOGIKALİQ SOCIOLOGIYaǴA BOLǴAN MÚTÁJLIK HÁM ZAMANAGÓY JÁMIYETTIŃ RAWAJLANİWİNİŃ ZÁRÚRLI ShÁRTLERI. SOCIALLİQ PEDAGOGIKAǴA KIRISIW</string>
    <string name="ozberSharayatlari">ÓZBEKSTANDA SOCIALLİQ PEDAGOGIKANİŃ QÁLIPLESIWINIŃ MÁDENIY-TARIYXİY, SOCIALLİQ-HUQİQİY ShÁRT-ShARAYATLARI</string>
    <string name="shet_mleketlerde">ShET MÁMLEKETLERDE SOCIALLİQ PEDAGOGIKANİŃ RAWAJLANİW TARIYXİ</string>
    <string name="zbestanda_sociall_q_pedagogikan_rawajlan_w_tariyx">ÓZBESTANDA SOCIALLİQ PEDAGOGIKANİŃ RAWAJLANİW TARIYXİ</string>
    <string name="xal_q_pedagogikas_h_m_islam">XALİQ PEDAGOGIKASİ HÁM ISLAM TÁLIYMATİNDA SOCIAL-PEDAGOGIKALİQ IDEYaLAR</string>
    <string name="sociall_q_pedagogika">SOCIALLİQ PEDAGOGIKA PÁN HÁM ÁMELIY ISKERLIK TARAWİ SİPATİNDA. SOCIALLASİW – SOCIALLİQ PEDAGOGIKALİQ PROCESS. BALANİŃ SOCIUMDA RAWAJLANİWİ</string>
    <string name="sociall_q_pedagogika_h_m_pedagogikal_q_sociologiyada_norma">SOCIALLİQ PEDAGOGIKA HÁM PEDAGOGIKALİQ SOCIOLOGIYaDA “NORMA” HÁM “NORMADAN ShEGINIW” TÚSINIKLERI. DEVIANT MINEZ-XULQ - SOCIAL -PEDAGOGIKALİQ MAShQALA SİPATİNDA</string>
    <string name="social_pedagogt_k_siplik_iskerligi_sociall_q_pedagogikan_kategoriyalar">SOCIAL PEDAGOGTİŃ KÁSIPLIK ISKERLIGI. SOCIALLİQ PEDAGOGIKANİŃ KATEGORIYaLARİ</string>
    <string name="sociall_q_pedagogikan_principleri_social_pedagogikal_q_izertlewler">SOCIALLİQ PEDAGOGIKANİŃ PRINCIPLERI. SOCIAL – PEDAGOGIKALİQ IZERTLEWLER</string>
    <string name="social_pedagogikal_q_iskerlik_metodikas_mexanizmleri_h_m_texnologiyas">SOCIAL-PEDAGOGIKALİQ ISKERLIK METODIKASİ, MEXANIZMLERI HÁM TEXNOLOGIYaSİ</string>
    <string name="sha_araqlard_tipleri_h">ShAŃARAQLARDİŃ TIPLERI HÁM JETIM BALA ASİRAP ALǴAN ShAŃARAQ PENEN ALİP BARİLATUǴİN SOCIAL-PEDAGOGIKALİQ ISKERLIK. SOCIALLASİW FAKTORLARİ HÁM QURALLARİ</string>
    <string name="qay_rqoml_q_h_m_q_wenderlik">QAYİRQOMLİQ HÁM QÁWENDERLIK. ÓZBEKSTANDA MEHRIBANLİQ ÚYLERINDE ALİP BARİLATUǴİN SOCIAL-PEDAGOGIKALİQ ISKERLIK</string>
    <string name="m_h_lleler">MÁHÁLLELER - SOCIALLİQ ÓZIN-ÓZI BASQARİW ORGANİ. OQİW ORİNLARİNDA ALİP BARİLATUǴİN SOCIAL-PEDAGOGIKALİQ ISKERLIK</string>
    <string name="card15Text">SPIRTLI IShIMLIKLERGE BEYIMLILIGI BOLǴAN ÓSPIRIMLER MENEN ALİP BARİLATUǴİN SOCIAL-PEDAGOGIKALİQ ISKERLIK</string>
    <string name="card16Text">NÁShEBENTLIK – DEVIANT MINEZ-XULİQTİŃ FORMASİ SİPATİNDA</string>
    <string name="glossariy">GLOSSARIY</string>
    <string name="paydalan_l_an_debiyatlar_dizimi1">PAYDALANİLǴAN ÁDEBIYaTLAR DIZIMI</string>
    <string name="small">Kıshı</string>
    <string name="normal">Ortasha</string>
    <string name="large">Úlken</string>
    <string name="extra_large">Júda úlken</string>
    <string name="change_text_size">Текст өлшемин өзгертиў</string>
    <string name="bas_bet">Bas bet</string>
    <string name="about">Sabaqlıqta sociallıq pedagogika pánine bolǵan sociallıq buyurpa, Ózbekstan Respublikasında hám shet el mámleketlerinde bul pánniń rawajlanıw tariyxı hám tendenciyaları, onıń mádeniy tariyxıy, sociallıq-huqıqıy shárt-sharayatları, principleri hám kategoriyaları, balanıń sociumda rawajlanıwı, sociallıq pedagogikada “norma”, “normalardan sheginiw” hám “deviaciya” túsinikleri, sociallıq institutlar sıpatında shańaraqlar, máhálleler hám oqıw orınları alıp barılatuǵın social-pedagogikalıq iskerliktiń mazmunı hám metodikaları sıyaqlı máseleler ashıp berilgen. Sabaqlıqtan joqarı pedagogikalıq oqıw orınlarınıń pedagogları, magistrantlar hám talabalar paydalanıwı múmkin.</string>
    <string name="juwapl_redaktor"><b>Juwaplı redaktor:</b></string>
    <string name="juwapRedaktorTitle"><b>U. Aleuov</b> – Ájiniyaz atındaǵı Nókis mámleketlik pedagogikalıq institutı professorı, pedagogika ilimleri doktorı.</string>
    <string name="Recenzentı"><b>Recenzentı:</b></string>
    <string name="rezedentiTitle"><b>A.T. Tilegenov</b> – Ózbekstan Pedagogika ilimleri ilim izertlew institutı Nókis filialı direktorı, pedagogika ilimleriniń kandidatı, úlken ilimiy xızmetker. </string>
    <string name="rezedentiTitle2"><b>M.E. Pazılova</b> – Ájiniyaz atındaǵı Nókis mámleketlik pedagogikalıq institutı Pedagogika kafedrası bıslıǵı, pedagogika ilimleriniń kandidatı, docent.</string>
    <string name="juwmaqlaw">Ózbekstan Respublikası Joqarı hám orta arnawlı bilimlendiriw ministrligi janındaǵı Muwapıqlastırıwshı keńesi tárepinen 2021–jıl «18» avgust kúngi 356–51-sanlı buyrıǵına muwapıq sabaqlıq sıpatında baspaǵa usınılǵan.</string>
    <string name="paydalan_l_an_debiyatlar_dizimi">PAYDALANİLǴAN ÁDEBIYaTLAR DIZIMI</string>
    <string name="aaaa"><b>1.</b> Каримов И.А. Ўзбекистон XXI аср бўсағасида: хавфсизликка таҳдид, барқарорлик шартлари ва тараққиёт кафолатлари – Т.: Ўзбекистон, 1997. – 315б.
        <br><b>2.</b> Мирзиёев Ш.М. “Эркин ва фаровон, демократик Ўзбекистон давлатини мард ва олижаноб халқимиз билан бирга қурамиз” мавзусидаги Ўзбекистон Республикаси Президенти лавозимига киришиш тантанали маросимига бағишланган Олий Мажлис палаталарининг қўшма мажлисидаги нутқи. – Т.: “Ўзбекистон”, 2016. – 56 б.</br>
        <br><b>3.</b> Мирзиёев Ш.М. Танқидий таҳлил, қатъий тартиб-интизом ва шахсий жавобгарлик – ҳар бир раҳбар фаолиятининг кундалик қоидаси бўлиши керак. –Т.: Ўзбекистон, 2017.– 102б. </br>
        <br><b>4.</b> Азизхўжаева Н.Н. Ўқитувчи тайёрлашнинг педагогик технологияси. – Т.: ТДПУ, 2000. – 52 б. </br>
        <br><b>5.</b> Андреев В.И. Педагогика: Учебный курс для творческого саморазвития. – Казань: Центр инновационных технологий, 2000 – 608 с. </br>
        <br><b>6.</b> Бедаш Н.Н. Развитие и воспитание детей – социальной заказ общества. // Вестник НГУ. Серия: Педагогика, 2009. Том 10, выпуск 1. – С.110-113. 7. Белова Е.С. Одаренность малыша раскрыть, понять, поддержать. – М.: Флинта, 1998. – 144 с. </br>
        <br><b>8.</b> Брюно Ж. и др. Одаренные дети: психоло-педагогические исследования и прак-тика// Психологический журнал. – 1995. - №4. – С.73-75. </br>
        <br><b>9.</b> Выготский Л.С. Педагогическая психология. – М.: ACT, 2005. – 671 с. </br>
        <br><b>10.</b> Гребенюк О.С. Педагогика индивидуальности: Курс лекций. – Калининград, 1995. – 94 с. 11. Давыдов В.В. Теория развивающего обучения: монография. – М.: ИНТОР. – 1996. – 544 с. </br>
        <br><b>12.</b> Дьюи Дж. От ребенка – к миру, от мира– к ребенку. – М.: Карапуз. – 2009. – 352 с. </br>
        <br><b>13.</b> Йўлдошев Ж.Ғ., Усмонов С. Илғор педагогик технологиялар. – Т.: Ўқитувчи, 2004. – 101 б. </br>
        <br><b>14.</b> Каримова В. Психология. – Т.: Абдулла Қодирий номидаги халқ мероси нашриёти, 2002. – 204 б. </br>
        <br><b>15.</b> Клапаред Э. Психология ребенка и экспериментальная педагогика. – М.: ЛКИ, 2007. – 168 с. </br>
        <br><b>16.</b> Леонтович А.В. Исследовательская деятельность школьников: международные проекты // Народное образование. – 2010. – №3. – с. 253-258. </br>
        <br><b>17.</b> Леонтьев А.Н. Деятельность. Сознание. Личность. – М.: Изд. центр «Академия». – 2004. – 352 с. </br>
        <br><b>18.</b> Маслоу А. Психология бытия. // Пер. с англ. О.О. Чистякова. – Рефл-бук: Ваклер, 1997. – 84 с </br>
        <br><b>19.</b> Маънавият: асосий тушунчалар изоҳли луғати. – Т.: Ғафур Ғулом номидаги нашриёт-матбаа ижодий уйи, 2010. – 760 б. </br>
        <br><b>20.</b> Мудрик А.В. Основы социальной педагогики. – М.: ACADEMA, 2006. – 205 с. </br>
        <br><b>21.</b> Селевко Г.К. Педагогические технологии на основе дидактического и методического усовершенствования. – М.: НИИ школьных технологий, 2005. – 288 с. </br>
        <br><b>22.</b> Селиванов В.С. Основы общей педагогики: теория и методика. М.:Академия, 2002. – 420 с. </br>
        <br><b>23.</b> Сластёнин В.А., Чижакова Г.И. Введение в педагогическую аксиологию. – М.: Академия, 2003. – 192 с. </br>
        <br><b>24.</b> Тарбия: (ота-оналар ва мураббийлар учун энциклопедия). / Тузувчи М.Н.Аминов. – Т.: “Ўзбекистон миллий энциклопедияси” Давлат илмий нашриёти, 2010. – 740 б. </br>
        <br><b>25.</b> Толипов Ў., Усмонбоева М. Педагогик технологияларнинг татбиқий асослари. – Т.: Фан, 2006. – 261 б. </br>
        <br><b>26.</b> Фалсафа: қомусий луғат (Тузувчи ва масъул муҳаррир Қ.Назаров). – Т.: Шарқ, 2004. – Б.173-174. </br>
        <br><b>27.</b> Харламов И.Ф. Педагогика в вопросах и ответах. – М.: Гардарики, 2001. – 256 с. </br>
        <br><b>28.</b> Хекхаузен Х. Психология мотивации достижения/ Пер. с англ. – СПб.: Речь, 2001.- 240 с. </br>
        <br><b>29.</b> Эгамбердиева Н. Ижтимоий педагогика. – Т.: Алишер Навоий номидаги Ўзбекистон Миллий кутубхонаси нашриёти, 2009. – 232 б. </br>
        <br><b>30.</b> Қуронов М. Болам бахтли бўлсин, десангиз (Ота-оналар учун). – Т.: «Маънавият», 2013. – 320 б. </br>
        <br><b>31.</b> Қуронов М. Биз англаётган ҳақиқат. – Т.: «Маънавият», 2008. – 152 б. </br>
        <br><b>32.</b> Қуронов М., Курбаниязова З. Ижтимоий педагогика – Т.: РТМ, 2002. –134б. </br>
        <br><b>33.</b> Қуронов М. Миллий тарбия. – Т.: Маънавият, 2007. – 240 б. </br>
        <br><b>34.</b> Dillon J.T. The basic questions of education. What to ask ourselves when education our young. Lewiston. – N.Y.: Edwin MellenPress. – 2010. – 292 p. </br>
        <br><b>35.</b> Education today: the OECD perspective. OECD (Organisation for Economic Co-operation and Development) – 2013. – 128 p. </br>
        <br><b>36.</b> Poonyawatpornkul J., Wattanakasiwich P. High-speed video analysis of The Condition of education: a statistical report on the condition of American education. Washington: National Center for Education Statistics. – 2011. 382 p. </br>
        <br><b>37.</b> Jan Storø. Practical social pedagogy: Theories, Values and Tools for Working with Children and Young People. Policy Press, 2013. – 151 p. </br>
        <br><b>38.</b> Inge Bryderup, Peter Moss, Claire Cameron, Stefan Kleipoedszus, Jytte Juul Jensen, Gabriel Eichsteller, Pat Petrie, Janet Boddy, Sylvia Holthoff, Anna Kathrine Frorup, Michael Fielding, Michel VandenbroeckSocial Pedagogy and Working with Children and Young People: Where Care and Education Meet. Jessica Kingsley Publishers, 2011. – 224 p. </br>
        <br><b>39.</b> Kieron Hatton Social Pedagogy in the UK: Theory and Practice. Russel House Publishing, 2013. – 114 p.</br></string>
    <string name="saylandilarMarks">Saylandilar</string>
    <string name="sociall_q_pedagogika_tn_sabaql_q_z_s_salieva_b_x_xodjaev_z_k_kurbaniyazova_shkent_yosh_avlod_matbaa_2021"><b>Sociallıq pedagogika</b> [Маtn]: Sabaqlıq / Z.S.Salieva, B.X.Xodjaev, Z.K.Kurbaniyazova. – Тоshkent: «Yosh avlod matbaa», 2021.</string>
    <string name="title">title</string>
    <string name="text">text</string>
    <string name="page_title">Social Pedagogika</string>
</resources>