<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/smallTextSetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginHorizontal="@dimen/margin_eight"
            android:layout_marginBottom="@dimen/margin_eight"
            android:layout_marginTop="@dimen/margin_eight"
            android:text="@string/small"
            android:fontFamily="@font/times"/>

        <Button
            android:id="@+id/normalTextSetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/smallTextSetting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginHorizontal="@dimen/margin_eight"
            android:layout_marginBottom="@dimen/margin_eight"
            android:text="@string/normal"
            android:fontFamily="@font/times"/>

        <Button
            android:id="@+id/largeTextSetting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/normalTextSetting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginHorizontal="@dimen/margin_eight"
            android:layout_marginBottom="@dimen/margin_eight"
            android:text="@string/large"
            android:fontFamily="@font/times"/>

        <Button
            android:id="@+id/extraLargeTextSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/largeTextSetting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginHorizontal="@dimen/margin_eight"
            android:layout_marginBottom="@dimen/margin_eight"
            android:text="@string/extra_large"
            android:fontFamily="@font/times"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>